# pro-self-extracting-wasm

./: .gitignore  Cargo.toml  README.md  build.mjs  build.sh  compress.js  extract.js  extract.mjs  main.js  package-lock.json  package.json  playwright.config.js
.github/workflows/: playwright.yml
bundle/: Cargo.toml  build.rs  main.rs
runtime/: Cargo.toml  lib.rs
tests/: tests.spec.mjs
