#  ┌───────────────────────────────────────────────────────────────────────────┐
#  │                                                                           │
#  │  ██████╗ ██████╗  ██████╗   Copyright (C) 2025, The Prospective Company   │
#  │  ██╔══██╗██╔══██╗██╔═══██╗                                                │
#  │  ██████╔╝██████╔╝██║   ██║  This file is part of the Procss library,      │
#  │  ██╔═══╝ ██╔══██╗██║   ██║  distributed under the terms of the            │
#  │  ██║     ██║  ██║╚██████╔╝  Apache License 2.0.  The full license can     │
#  │  ╚═╝     ╚═╝  ╚═╝ ╚═════╝   be found in the LICENSE file.                 │
#  │                                                                           │
#  └───────────────────────────────────────────────────────────────────────────┘

[package]
name = "bundle"
description = ""
edition = "2024"
publish = false

[[bin]]
name = "bundle"
path = "main.rs"
bench = false

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
wasm-opt = "0.116.1"
